fixed bug that shifted the layout when Vue was not fully loaded

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -458,6 +458,7 @@ button {
 
 .app-info-text {
   max-width: 256px;
+  height: 24px;
 }
 
 .app-tag-container, #app-tag-add-container {
